--- a/DemoDynamicCollectionView/Base.lproj/Pinterest.storyboard
+++ b/DemoDynamicCollectionView/Base.lproj/Pinterest.storyboard
@@ -6,38 +6,36 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Collection View Controller-->
+        <!--Pinterest View Controller-->
         <scene sceneID="jom-gQ-Esf">
             <objects>
-                <collectionViewController id="G1n-5R-MzE" sceneMemberID="viewController">
+                <collectionViewController id="G1n-5R-MzE" customClass="PinterestViewController" customModule="DemoDynamicCollectionView" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="PdR-g8-PIa">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="9mI-LB-cJi">
-                            <size key="itemSize" width="181" height="167"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        </collectionViewFlowLayout>
+                        <collectionViewLayout key="collectionViewLayout" id="tnG-Xw-bev" customClass="PinterestViewLayout" customModule="DemoDynamicCollectionView" customModuleProvider="target"/>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PinterestCell" id="vI7-xd-gIQ" customClass="PinterestCell" customModule="DemoDynamicCollectionView" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="181" height="167"/>
+                                <rect key="frame" x="0.0" y="64" width="193" height="185"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="181" height="167"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="193" height="185"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="dcA-On-ZeG">
-                                            <rect key="frame" x="8" y="8" width="165" height="113"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="dcA-On-ZeG">
+                                            <rect key="frame" x="8" y="8" width="177" height="131"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="131" id="y2N-yg-zWe"/>
+                                            </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQe-jK-sdy">
-                                            <rect key="frame" x="8" y="125" width="165" height="21"/>
+                                            <rect key="frame" x="8" y="143" width="177" height="21"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qrn-2N-d95">
-                                            <rect key="frame" x="8" y="144" width="165" height="15"/>
+                                            <rect key="frame" x="8" y="162" width="177" height="15"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
@@ -58,6 +56,13 @@
                                     <constraint firstItem="dcA-On-ZeG" firstAttribute="leading" secondItem="vI7-xd-gIQ" secondAttribute="leadingMargin" id="szt-Hs-4Ph"/>
                                     <constraint firstItem="ZQe-jK-sdy" firstAttribute="top" secondItem="dcA-On-ZeG" secondAttribute="bottom" constant="4" id="zKe-Cb-ACq"/>
                                 </constraints>
+                                <size key="customSize" width="193" height="185"/>
+                                <connections>
+                                    <outlet property="captionLabel" destination="ZQe-jK-sdy" id="gfF-HT-2cY"/>
+                                    <outlet property="commentLabel" destination="Qrn-2N-d95" id="dah-Ag-k2v"/>
+                                    <outlet property="imageHeightConstraint" destination="y2N-yg-zWe" id="z8Y-aW-6a7"/>
+                                    <outlet property="imageView" destination="dcA-On-ZeG" id="x5n-FQ-Ce2"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
