--- a/DemoDynamicCollectionView/Base.lproj/Pinterest.storyboard
+++ b/DemoDynamicCollectionView/Base.lproj/Pinterest.storyboard
@@ -15,28 +15,28 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <collectionViewLayout key="collectionViewLayout" id="tnG-Xw-bev" customClass="PinterestViewLayout" customModule="DemoDynamicCollectionView" customModuleProvider="target"/>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PinterestCell" id="vI7-xd-gIQ" customClass="PinterestCell" customModule="DemoDynamicCollectionView" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="64" width="193" height="185"/>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" verticalCompressionResistancePriority="250" reuseIdentifier="PinterestCell" id="vI7-xd-gIQ" customClass="PinterestCell" customModule="DemoDynamicCollectionView" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="64" width="192" height="225"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="193" height="185"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="192" height="225"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" translatesAutoresizingMaskIntoConstraints="NO" id="dcA-On-ZeG">
-                                            <rect key="frame" x="8" y="8" width="177" height="131"/>
+                                            <rect key="frame" x="8" y="8" width="176" height="131"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="131" id="y2N-yg-zWe"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZQe-jK-sdy">
-                                            <rect key="frame" x="8" y="143" width="177" height="21"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <rect key="frame" x="8" y="143" width="176" height="17"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="12"/>
                                             <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qrn-2N-d95">
-                                            <rect key="frame" x="8" y="162" width="177" height="15"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qrn-2N-d95">
+                                            <rect key="frame" x="8" y="160" width="176" height="57"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="10"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -51,12 +51,12 @@
                                     <constraint firstItem="Qrn-2N-d95" firstAttribute="bottom" secondItem="vI7-xd-gIQ" secondAttribute="bottomMargin" id="TiK-ec-KvO"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="Qrn-2N-d95" secondAttribute="trailing" id="aHj-D5-mEc"/>
                                     <constraint firstItem="Qrn-2N-d95" firstAttribute="leading" secondItem="vI7-xd-gIQ" secondAttribute="leadingMargin" id="iN9-xo-Ow3"/>
-                                    <constraint firstItem="Qrn-2N-d95" firstAttribute="top" secondItem="ZQe-jK-sdy" secondAttribute="bottom" constant="-2" id="qCp-Wq-Kyz"/>
+                                    <constraint firstItem="Qrn-2N-d95" firstAttribute="top" secondItem="ZQe-jK-sdy" secondAttribute="bottom" id="qCp-Wq-Kyz"/>
                                     <constraint firstItem="ZQe-jK-sdy" firstAttribute="centerX" secondItem="Qrn-2N-d95" secondAttribute="centerX" id="shS-YN-ssz"/>
                                     <constraint firstItem="dcA-On-ZeG" firstAttribute="leading" secondItem="vI7-xd-gIQ" secondAttribute="leadingMargin" id="szt-Hs-4Ph"/>
                                     <constraint firstItem="ZQe-jK-sdy" firstAttribute="top" secondItem="dcA-On-ZeG" secondAttribute="bottom" constant="4" id="zKe-Cb-ACq"/>
                                 </constraints>
-                                <size key="customSize" width="193" height="185"/>
+                                <size key="customSize" width="192" height="225"/>
                                 <connections>
                                     <outlet property="captionLabel" destination="ZQe-jK-sdy" id="gfF-HT-2cY"/>
                                     <outlet property="commentLabel" destination="Qrn-2N-d95" id="dah-Ag-k2v"/>
